// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item test suite should render Action properly 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemTouchable-73"
>
  <Status
    item={
      ReduxAction {
        "_id": 73,
        "action": Object {
          "action": "",
          "type": "__ERROR:UNDEFINED__",
        },
        "startTime": 100,
        "stringifiedAction": "",
        "type": "REDUX",
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      >
        redux action
      </TextSecondaryColor>
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        00:00:00
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      />
    </Component>
  </Component>
</ForwardRef>
`;

exports[`Item test suite should render Connection disconnected properly 1`] = `
<Component
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemStatic-81"
>
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      >
        connection type : wifi
      </TextSecondaryColor>
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        00:00:01
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      >
        You are disconnected
      </Text>
    </Component>
  </Component>
</Component>
`;

exports[`Item test suite should render Connection properly 1`] = `
<Component
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemStatic-81"
>
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      >
        connection type : wifi
      </TextSecondaryColor>
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        00:00:01
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      >
        You are connected
      </Text>
    </Component>
  </Component>
</Component>
`;

exports[`Item test suite should render Native Request properly 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemTouchable-73"
>
  <Status
    item={
      NRequest {
        "_id": 73,
        "dataSent": "dataSent",
        "endTime": 1613477575757,
        "method": "GET",
        "readyState": 4,
        "response": "response",
        "responseContentType": "application/json",
        "responseSize": 0,
        "responseType": "blob",
        "responseURL": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
        "shortUrl": "",
        "startTime": 1613477574742,
        "status": 200,
        "timeout": 0,
        "type": "RNR",
        "url": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      >
        run.mocky.io
      </TextSecondaryColor>
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        12:12:54
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      >
        /v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
      </Text>
    </Component>
  </Component>
</ForwardRef>
`;

exports[`Item test suite should render Request properly 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemTouchable-73"
>
  <Status
    item={
      RNRequest {
        "_id": 73,
        "dataSent": "dataSent",
        "endTime": 1613477575757,
        "method": "GET",
        "readyState": 4,
        "response": "response",
        "responseContentType": "application/json",
        "responseSize": 0,
        "responseType": "blob",
        "responseURL": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
        "shortUrl": "",
        "startTime": 1613477574742,
        "status": 200,
        "timeout": 0,
        "type": "NR",
        "url": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      >
        run.mocky.io
      </TextSecondaryColor>
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        12:12:54
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      >
        /v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
      </Text>
    </Component>
  </Component>
</ForwardRef>
`;

exports[`Item test suite should render Request properly even bad URL passed in the request to avoid crash 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemTouchable-73"
>
  <Status
    item={
      RNRequest {
        "_id": 73,
        "dataSent": "dataSent",
        "endTime": 1613477575757,
        "method": "GET",
        "readyState": 4,
        "response": "response",
        "responseContentType": "application/json",
        "responseSize": 0,
        "responseType": "blob",
        "responseURL": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
        "shortUrl": "",
        "startTime": 1613477574742,
        "status": 200,
        "timeout": 0,
        "type": "RNR",
        "url": null,
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      />
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        12:12:54
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      />
    </Component>
  </Component>
</ForwardRef>
`;

exports[`Item test suite should render Request properly even no URL passed in the request to avoid crash 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemTouchable-73"
>
  <Status
    item={
      RNRequest {
        "_id": 73,
        "dataSent": "dataSent",
        "endTime": 1613477575757,
        "method": "GET",
        "readyState": 4,
        "response": "response",
        "responseContentType": "application/json",
        "responseSize": 0,
        "responseType": "blob",
        "responseURL": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
        "shortUrl": "",
        "startTime": 1613477574742,
        "status": 200,
        "timeout": 0,
        "type": "RNR",
        "url": "",
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      />
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        12:12:54
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      />
    </Component>
  </Component>
</ForwardRef>
`;

exports[`Item test suite should render properly & press item 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 0.5,
        "flexDirection": "row",
        "height": 60,
        "maxHeight": 60,
        "minHeight": 60,
        "paddingBottom": 0.5,
      },
      Object {
        "backgroundColor": "#374151",
        "borderBottomColor": "#6B7280",
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  testID="itemTouchable-73"
>
  <Status
    item={
      RNRequest {
        "_id": 73,
        "dataSent": "dataSent",
        "endTime": 1613477575757,
        "method": "GET",
        "readyState": 4,
        "response": "response",
        "responseContentType": "application/json",
        "responseSize": 0,
        "responseType": "blob",
        "responseURL": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
        "shortUrl": "",
        "startTime": 1613477574742,
        "status": 200,
        "timeout": 0,
        "type": "NR",
        "url": "https://run.mocky.io/v3/1a2d092a-42b2-4a89-a44f-267935dc13e9",
      }
    }
  />
  <Component
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 16,
      }
    }
  >
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <TextSecondaryColor
        numberOfLines={1}
      >
        run.mocky.io
      </TextSecondaryColor>
      <TextSecondaryColor
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": "#9CA3AF",
            },
          ]
        }
      >
        12:12:54
      </TextSecondaryColor>
    </Component>
    <Component
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        numberOfLines={1}
      >
        /v3/1a2d092a-42b2-4a89-a44f-267935dc13e9
      </Text>
    </Component>
  </Component>
</ForwardRef>
`;
